--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "deps/haxe-babylon"]
 	path = deps/haxe-babylon
-	url = git@github.com:firefalcom/haxe-babylon.git
+	url = https://github.com/firefalcom/haxe-babylon.git
